MiniCComplete/obj/Debug/MiniCParser.cs
//------------------------------------------------------------------------------
// <auto-generated>
//     This code was generated by a tool.
//     ANTLR Version: 4.6.6
//
//     Changes to this file may cause incorrect behavior and will be lost if
//     the code is regenerated.
// </auto-generated>
//------------------------------------------------------------------------------

// Generated from C:\Users\kosta\Desktop\MiniCComplete\MiniC.g4 by ANTLR 4.6.6

// Unreachable code detected
#pragma warning disable 0162
// The variable '...' is assigned but its value is never used
#pragma warning disable 0219
// Missing XML comment for publicly visible type or member '...'
#pragma warning disable 1591
// Ambiguous reference in cref attribute
#pragma warning disable 419

namespace MiniC {
using Antlr4.Runtime;
using Antlr4.Runtime.Atn;
using Antlr4.Runtime.Misc;
using Antlr4.Runtime.Tree;
using System.Collections.Generic;
using DFA = Antlr4.Runtime.Dfa.DFA;

[System.CodeDom.Compiler.GeneratedCode("ANTLR", "4.6.6")]
[System.CLSCompliant(false)]
public partial class MiniCParser : Parser {
	public const int
		FUNCTION=1, IF=2, ELSE=3, FOR=4, WHILE=5, DO=6, SWITCH=7, CASE=8, DEFAULT=9, 
		RETURN=10, BREAK=11, LP=12, RP=13, LB=14, RB=15, SEMICOLON=16, COLON=17, 
		COMMA=18, PLUS=19, MINUS=20, MULTI=21, DIV=22, ASSIGN=23, PLUSONE=24, 
		MINUSONE=25, AND=26, OR=27, NOT=28, GT=29, GTE=30, LT=31, LTE=32, EQUAL=33, 
		NEQUAL=34, INTEGER=35, VARIABLE=36, STRING=37, COMMENT=38, WS=39;
	public const int
		RULE_compileUnit = 0, RULE_function_definition = 1, RULE_fargs = 2, RULE_statement = 3, 
		RULE_expr_statement = 4, RULE_if_statement = 5, RULE_for_statement = 6, 
		RULE_while_statement = 7, RULE_do_while_statement = 8, RULE_switch_statement = 9, 
		RULE_switch_case = 10, RULE_switch_default = 11, RULE_return_statement = 12, 
		RULE_break_statement = 13, RULE_null_statement = 14, RULE_compound_statement = 15, 
		RULE_statements = 16, RULE_expr = 17, RULE_args = 18;
	public static readonly string[] ruleNames = {
		"compileUnit", "function_definition", "fargs", "statement", "expr_statement", 
		"if_statement", "for_statement", "while_statement", "do_while_statement", 
		"switch_statement", "switch_case", "switch_default", "return_statement", 
		"break_statement", "null_statement", "compound_statement", "statements", 
		"expr", "args"
	};

	private static readonly string[] _LiteralNames = {
		null, "'function'", "'if'", "'else'", "'for'", "'while'", "'do'", "'switch'", 
		"'case'", "'default'", "'return'", "'break'", "'('", "')'", "'{'", "'}'", 
		"';'", "':'", "','", "'+'", "'-'", "'*'", "'/'", "'='", "'++'", "'--'", 
		"'&&'", "'||'", "'!'", "'>'", "'>='", "'<'", "'<='", "'=='", "'!='"
	};
	private static readonly string[] _SymbolicNames = {
		null, "FUNCTION", "IF", "ELSE", "FOR", "WHILE", "DO", "SWITCH", "CASE", 
		"DEFAULT", "RETURN", "BREAK", "LP", "RP", "LB", "RB", "SEMICOLON", "COLON", 
		"COMMA", "PLUS", "MINUS", "MULTI", "DIV", "ASSIGN", "PLUSONE", "MINUSONE", 
		"AND", "OR", "NOT", "GT", "GTE", "LT", "LTE", "EQUAL", "NEQUAL", "INTEGER", 
		"VARIABLE", "STRING", "COMMENT", "WS"
	};
	public static readonly IVocabulary DefaultVocabulary = new Vocabulary(_LiteralNames, _SymbolicNames);

	[System.Obsolete("Use Vocabulary instead.")]
	public static readonly string[] tokenNames = GenerateTokenNames(DefaultVocabulary, _SymbolicNames.Length);

	private static string[] GenerateTokenNames(IVocabulary vocabulary, int length) {
		string[] tokenNames = new string[length];
		for (int i = 0; i < tokenNames.Length; i++) {
			tokenNames[i] = vocabulary.GetLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = vocabulary.GetSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}

		return tokenNames;
	}

	[System.Obsolete("Use IRecognizer.Vocabulary instead.")]
	public override string[] TokenNames
	{
		get
		{
			return tokenNames;
		}
	}

	[NotNull]
	public override IVocabulary Vocabulary
	{
		get
		{
			return DefaultVocabulary;
		}
	}

	public override string GrammarFileName { get { return "MiniC.g4"; } }

	public override string[] RuleNames { get { return ruleNames; } }

	public override string SerializedAtn { get { return _serializedATN; } }

	public MiniCParser(ITokenStream input)
		: base(input)
	{
		_interp = new ParserATNSimulator(this,_ATN);
	}
	public partial class CompileUnitContext : ParserRuleContext {
		public ITerminalNode Eof() { return GetToken(MiniCParser.Eof, 0); }
		public Function_definitionContext[] function_definition() {
			return GetRuleContexts<Function_definitionContext>();
		}
		public Function_definitionContext function_definition(int i) {
			return GetRuleContext<Function_definitionContext>(i);
		}
		public StatementContext[] statement() {
			return GetRuleContexts<StatementContext>();
		}
		public StatementContext statement(int i) {
			return GetRuleContext<StatementContext>(i);
		}
		public CompileUnitContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_compileUnit; } }
		public override void EnterRule(IParseTreeListener listener) {
			IMiniCListener typedListener = listener as IMiniCListener;
			if (typedListener != null) typedListener.EnterCompileUnit(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			IMiniCListener typedListener = listener as IMiniCListener;
			if (typedListener != null) typedListener.ExitCompileUnit(this);
		}
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IMiniCVisitor<TResult> typedVisitor = visitor as IMiniCVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitCompileUnit(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public CompileUnitContext compileUnit() {
		CompileUnitContext _localctx = new CompileUnitContext(_ctx, State);
		EnterRule(_localctx, 0, RULE_compileUnit);
		int _la;
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 40;
			_errHandler.Sync(this);
			_la = _input.La(1);
			do {
				{
				State = 40;
				_errHandler.Sync(this);
				switch (_input.La(1)) {
				case FUNCTION:
					{
					State = 38; function_definition();
					}
					break;
				case IF:
				case FOR:
				case WHILE:
				case DO:
				case SWITCH:
				case RETURN:
				case BREAK:
				case LP:
				case LB:
				case SEMICOLON:
				case PLUS:
				case MINUS:
				case NOT:
				case INTEGER:
				case VARIABLE:
				case STRING:
				case COMMENT:
					{
					State = 39; statement();
					}
					break;
				default:
					throw new NoViableAltException(this);
				}
				}
				State = 42;
				_errHandler.Sync(this);
				_la = _input.La(1);
			} while ( (((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << FUNCTION) | (1L << IF) | (1L << FOR) | (1L << WHILE) | (1L << DO) | (1L << SWITCH) | (1L << RETURN) | (1L << BREAK) | (1L << LP) | (1L << LB) | (1L << SEMICOLON) | (1L << PLUS) | (1L << MINUS) | (1L << NOT) | (1L << INTEGER) | (1L << VARIABLE) | (1L << STRING) | (1L << COMMENT))) != 0) );
			State = 44; Match(Eof);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.ReportError(this, re);
			_errHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class Function_definitionContext : ParserRuleContext {
		public Function_definitionContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_function_definition; } }
	 
		public Function_definitionContext() { }
		public virtual void CopyFrom(Function_definitionContext context) {
			base.CopyFrom(context);
		}
	}
	public partial class FunctionDefinitionContext : Function_definitionContext {
		public ITerminalNode FUNCTION() { return GetToken(MiniCParser.FUNCTION, 0); }
		public ITerminalNode VARIABLE() { return GetToken(MiniCParser.VARIABLE, 0); }
		public ITerminalNode LP() { return GetToken(MiniCParser.LP, 0); }
		public ITerminalNode RP() { return GetToken(MiniCParser.RP, 0); }
		public Compound_statementContext compound_statement() {
			return GetRuleContext<Compound_statementContext>(0);
		}
		public FargsContext fargs() {
			return GetRuleContext<FargsContext>(0);
		}
		public FunctionDefinitionContext(Function_definitionContext context) { CopyFrom(context); }
		public override void EnterRule(IParseTreeListener listener) {
			IMiniCListener typedListener = listener as IMiniCListener;
			if (typedListener != null) typedListener.EnterFunctionDefinition(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			IMiniCListener typedListener = listener as IMiniCListener;
			if (typedListener != null) typedListener.ExitFunctionDefinition(this);
		}
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IMiniCVisitor<TResult> typedVisitor = visitor as IMiniCVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitFunctionDefinition(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public Function_definitionContext function_definition() {
		Function_definitionContext _localctx = new Function_definitionContext(_ctx, State);
		EnterRule(_localctx, 2, RULE_function_definition);
		int _la;
		try {
			_localctx = new FunctionDefinitionContext(_localctx);
			EnterOuterAlt(_localctx, 1);
			{
			State = 46; Match(FUNCTION);
			State = 47; Match(VARIABLE);
			State = 48; Match(LP);
			State = 50;
			_errHandler.Sync(this);
			_la = _input.La(1);
			if (_la==VARIABLE) {
				{
				State = 49; fargs();
				}
			}

			State = 52; Match(RP);
			State = 53; compound_statement();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.ReportError(this, re);
			_errHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class FargsContext : ParserRuleContext {
		public ITerminalNode[] VARIABLE() { return GetTokens(MiniCParser.VARIABLE); }
		public ITerminalNode VARIABLE(int i) {
			return GetToken(MiniCParser.VARIABLE, i);
		}
		public ITerminalNode[] COMMA() { return GetTokens(MiniCParser.COMMA); }
		public ITerminalNode COMMA(int i) {
			return GetToken(MiniCParser.COMMA, i);
		}
		public FargsContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_fargs; } }
		public override void EnterRule(IParseTreeListener listener) {
			IMiniCListener typedListener = listener as IMiniCListener;
			if (typedListener != null) typedListener.EnterFargs(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			IMiniCListener typedListener = listener as IMiniCListener;
			if (typedListener != null) typedListener.ExitFargs(this);
		}
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IMiniCVisitor<TResult> typedVisitor = visitor as IMiniCVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitFargs(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public FargsContext fargs() {
		FargsContext _localctx = new FargsContext(_ctx, State);
		EnterRule(_localctx, 4, RULE_fargs);
		int _la;
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 55; Match(VARIABLE);
			State = 60;
			_errHandler.Sync(this);
			_la = _input.La(1);
			while (_la==COMMA) {
				{
				{
				State = 56; Match(COMMA);
				State = 57; Match(VARIABLE);
				}
				}
				State = 62;
				_errHandler.Sync(this);
				_la = _input.La(1);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.ReportError(this, re);
			_errHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class StatementContext : ParserRuleContext {
		public Expr_statementContext expr_statement() {
			return GetRuleContext<Expr_statementContext>(0);
		}
		public Compound_statementContext compound_statement() {
			return GetRuleContext<Compound_statementContext>(0);
		}
		public If_statementContext if_statement() {
			return GetRuleContext<If_statementContext>(0);
		}
		public For_statementContext for_statement() {
			return GetRuleContext<For_statementContext>(0);
		}
		public While_statementContext while_statement() {
			return GetRuleContext<While_statementContext>(0);
		}
		public Do_while_statementContext do_while_statement() {
			return GetRuleContext<Do_while_statementContext>(0);
		}
		public Switch_statementContext switch_statement() {
			return GetRuleContext<Switch_statementContext>(0);
		}
		public Return_statementContext return_statement() {
			return GetRuleContext<Return_statementContext>(0);
		}
		public Break_statementContext break_statement() {
			return GetRuleContext<Break_statementContext>(0);
		}
		public Null_statementContext null_statement() {
			return GetRuleContext<Null_statementContext>(0);
		}
		public StatementContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_statement; } }
		public override void EnterRule(IParseTreeListener listener) {
			IMiniCListener typedListener = listener as IMiniCListener;
			if (typedListener != null) typedListener.EnterStatement(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			IMiniCListener typedListener = listener as IMiniCListener;
			if (typedListener != null) typedListener.ExitStatement(this);
		}
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IMiniCVisitor<TResult> typedVisitor = visitor as IMiniCVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitStatement(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public StatementContext statement() {
		StatementContext _localctx = new StatementContext(_ctx, State);
		EnterRule(_localctx, 6, RULE_statement);
		try {
			State = 73;
			_errHandler.Sync(this);
			switch (_input.La(1)) {
			case LP:
			case PLUS:
			case MINUS:
			case NOT:
			case INTEGER:
			case VARIABLE:
			case STRING:
			case COMMENT:
				EnterOuterAlt(_localctx, 1);
				{
				State = 63; expr_statement();
				}
				break;
			case LB:
				EnterOuterAlt(_localctx, 2);
				{
				State = 64; compound_statement();
				}
				break;
			case IF:
				EnterOuterAlt(_localctx, 3);
				{
				State = 65; if_statement();
				}
				break;
			case FOR:
				EnterOuterAlt(_localctx, 4);
				{
				State = 66; for_statement();
				}
				break;
			case WHILE:
				EnterOuterAlt(_localctx, 5);
				{
				State = 67; while_statement();
				}
				break;
			case DO:
				EnterOuterAlt(_localctx, 6);
				{
				State = 68; do_while_statement();
				}
				break;
			case SWITCH:
				EnterOuterAlt(_localctx, 7);
				{
				State = 69; switch_statement();
				}
				break;
			case RETURN:
				EnterOuterAlt(_localctx, 8);
				{
				State = 70; return_statement();
				}
				break;
			case BREAK:
				EnterOuterAlt(_localctx, 9);
				{
				State = 71; break_statement();
				}
				break;
			case SEMICOLON:
				EnterOuterAlt(_localctx, 10);
				{
				State = 72; null_statement();
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.ReportError(this, re);
			_errHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class Expr_statementContext : ParserRuleContext {
		public Expr_statementContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_expr_statement; } }
	 
		public Expr_statementContext() { }
		public virtual void CopyFrom(Expr_statementContext context) {
			base.CopyFrom(context);
		}
	}
	public partial class StatementExprContext : Expr_statementContext {
		public ExprContext expr() {
			return GetRuleContext<ExprContext>(0);
		}
		public ITerminalNode SEMICOLON() { return GetToken(MiniCParser.SEMICOLON, 0); }
		public StatementExprContext(Expr_statementContext context) { CopyFrom(context); }
		public override void EnterRule(IParseTreeListener listener) {
			IMiniCListener typedListener = listener as IMiniCListener;
			if (typedListener != null) typedListener.EnterStatementExpr(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			IMiniCListener typedListener = listener as IMiniCListener;
			if (typedListener != null) typedListener.ExitStatementExpr(this);
		}
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IMiniCVisitor<TResult> typedVisitor = visitor as IMiniCVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitStatementExpr(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public Expr_statementContext expr_statement() {
		Expr_statementContext _localctx = new Expr_statementContext(_ctx, State);
		EnterRule(_localctx, 8, RULE_expr_statement);
		try {
			_localctx = new StatementExprContext(_localctx);
			EnterOuterAlt(_localctx, 1);
			{
			State = 75; expr(0);
			State = 76; Match(SEMICOLON);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.ReportError(this, re);
			_errHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class If_statementContext : ParserRuleContext {
		public If_statementContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_if_statement; } }
	 
		public If_statementContext() { }
		public virtual void CopyFrom(If_statementContext context) {
			base.CopyFrom(context);
		}
	}
	public partial class StatementIfContext : If_statementContext {
		public ITerminalNode IF() { return GetToken(MiniCParser.IF, 0); }
		public ITerminalNode LP() { return GetToken(MiniCParser.LP, 0); }
		public ExprContext expr() {
			return GetRuleContext<ExprContext>(0);
		}
		public ITerminalNode RP() { return GetToken(MiniCParser.RP, 0); }
		public StatementContext[] statement() {
			return GetRuleContexts<StatementContext>();
		}
		public StatementContext statement(int i) {
			return GetRuleContext<StatementContext>(i);
		}
		public ITerminalNode ELSE() { return GetToken(MiniCParser.ELSE, 0); }
		public StatementIfContext(If_statementContext context) { CopyFrom(context); }
		public override void EnterRule(IParseTreeListener listener) {
			IMiniCListener typedListener = listener as IMiniCListener;
			if (typedListener != null) typedListener.EnterStatementIf(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			IMiniCListener typedListener = listener as IMiniCListener;
			if (typedListener != null) typedListener.ExitStatementIf(this);
		}
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IMiniCVisitor<TResult> typedVisitor = visitor as IMiniCVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitStatementIf(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public If_statementContext if_statement() {
		If_statementContext _localctx = new If_statementContext(_ctx, State);
		EnterRule(_localctx, 10, RULE_if_statement);
		try {
			_localctx = new StatementIfContext(_localctx);
			EnterOuterAlt(_localctx, 1);
			{
			State = 78; Match(IF);
			State = 79; Match(LP);
			State = 80; expr(0);
			State = 81; Match(RP);
			State = 82; statement();
			State = 85;
			_errHandler.Sync(this);
			switch ( Interpreter.AdaptivePredict(_input,5,_ctx) ) {
			case 1:
				{
				State = 83; Match(ELSE);
				State = 84; statement();
				}
				break;
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.ReportError(this, re);
			_errHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class For_statementContext : ParserRuleContext {
		public For_statementContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_for_statement; } }
	 
		public For_statementContext() { }
		public virtual void CopyFrom(For_statementContext context) {
			base.CopyFrom(context);
		}
	}
	public partial class StatementForContext : For_statementContext {
		public ITerminalNode FOR() { return GetToken(MiniCParser.FOR, 0); }
		public ITerminalNode LP() { return GetToken(MiniCParser.LP, 0); }
		public ExprContext[] expr() {
			return GetRuleContexts<ExprContext>();
		}
		public ExprContext expr(int i) {
			return GetRuleContext<ExprContext>(i);
		}
		public ITerminalNode[] SEMICOLON() { return GetTokens(MiniCParser.SEMICOLON); }
		public ITerminalNode SEMICOLON(int i) {
			return GetToken(MiniCParser.SEMICOLON, i);
		}
		public ITerminalNode RP() { return GetToken(MiniCParser.RP, 0); }
		public Compound_statementContext compound_statement() {
			return GetRuleContext<Compound_statementContext>(0);
		}
		public StatementForContext(For_statementContext context) { CopyFrom(context); }
		public override void EnterRule(IParseTreeListener listener) {
			IMiniCListener typedListener = listener as IMiniCListener;
			if (typedListener != null) typedListener.EnterStatementFor(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			IMiniCListener typedListener = listener as IMiniCListener;
			if (typedListener != null) typedListener.ExitStatementFor(this);
		}
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IMiniCVisitor<TResult> typedVisitor = visitor as IMiniCVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitStatementFor(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public For_statementContext for_statement() {
		For_statementContext _localctx = new For_statementContext(_ctx, State);
		EnterRule(_localctx, 12, RULE_for_statement);
		try {
			_localctx = new StatementForContext(_localctx);
			EnterOuterAlt(_localctx, 1);
			{
			State = 87; Match(FOR);
			State = 88; Match(LP);
			State = 89; expr(0);
			State = 90; Match(SEMICOLON);
			State = 91; expr(0);
			State = 92; Match(SEMICOLON);
			State = 93; expr(0);
			State = 94; Match(RP);
			State = 95; compound_statement();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.ReportError(this, re);
			_errHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class While_statementContext : ParserRuleContext {
		public While_statementContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_while_statement; } }
	 
		public While_statementContext() { }
		public virtual void CopyFrom(While_statementContext context) {
			base.CopyFrom(context);
		}
	}
	public partial class StatementWhileContext : While_statementContext {
		public ITerminalNode WHILE() { return GetToken(MiniCParser.WHILE, 0); }
		public ITerminalNode LP() { return GetToken(MiniCParser.LP, 0); }
		public ExprContext expr() {
			return GetRuleContext<ExprContext>(0);
		}
		public ITerminalNode RP() { return GetToken(MiniCParser.RP, 0); }
		public Compound_statementContext compound_statement() {
			return GetRuleContext<Compound_statementContext>(0);
		}
		public StatementWhileContext(While_statementContext context) { CopyFrom(context); }
		public override void EnterRule(IParseTreeListener listener) {
			IMiniCListener typedListener = listener as IMiniCListener;
			if (typedListener != null) typedListener.EnterStatementWhile(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			IMiniCListener typedListener = listener as IMiniCListener;
			if (typedListener != null) typedListener.ExitStatementWhile(this);
		}
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IMiniCVisitor<TResult> typedVisitor = visitor as IMiniCVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitStatementWhile(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public While_statementContext while_statement() {
		While_statementContext _localctx = new While_statementContext(_ctx, State);
		EnterRule(_localctx, 14, RULE_while_statement);
		try {
			_localctx = new StatementWhileContext(_localctx);
			EnterOuterAlt(_localctx, 1);
			{
			State = 97; Match(WHILE);
			State = 98; Match(LP);
			State = 99; expr(0);
			State = 100; Match(RP);
			State = 101; compound_statement();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.ReportError(this, re);
			_errHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class Do_while_statementContext : ParserRuleContext {
		public Do_while_statementContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_do_while_statement; } }
	 
		public Do_while_statementContext() { }
		public virtual void CopyFrom(Do_while_statementContext context) {
			base.CopyFrom(context);
		}
	}
	public partial class StatementDoWhileContext : Do_while_statementContext {
		public ITerminalNode DO() { return GetToken(MiniCParser.DO, 0); }
		public Compound_statementContext compound_statement() {
			return GetRuleContext<Compound_statementContext>(0);
		}
		public ITerminalNode WHILE() { return GetToken(MiniCParser.WHILE, 0); }
		public ITerminalNode LP() { return GetToken(MiniCParser.LP, 0); }
		public ExprContext expr() {
			return GetRuleContext<ExprContext>(0);
		}
		public ITerminalNode RP() { return GetToken(MiniCParser.RP, 0); }
		public ITerminalNode SEMICOLON() { return GetToken(MiniCParser.SEMICOLON, 0); }
		public StatementDoWhileContext(Do_while_statementContext context) { CopyFrom(context); }
		public override void EnterRule(IParseTreeListener listener) {
			IMiniCListener typedListener = listener as IMiniCListener;
			if (typedListener != null) typedListener.EnterStatementDoWhile(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			IMiniCListener typedListener = listener as IMiniCListener;
			if (typedListener != null) typedListener.ExitStatementDoWhile(this);
		}
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IMiniCVisitor<TResult> typedVisitor = visitor as IMiniCVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitStatementDoWhile(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public Do_while_statementContext do_while_statement() {
		Do_while_statementContext _localctx = new Do_while_statementContext(_ctx, State);
		EnterRule(_localctx, 16, RULE_do_while_statement);
		try {
			_localctx = new StatementDoWhileContext(_localctx);
			EnterOuterAlt(_localctx, 1);
			{
			State = 103; Match(DO);
			State = 104; compound_statement();
			State = 105; Match(WHILE);
			State = 106; Match(LP);
			State = 107; expr(0);
			State = 108; Match(RP);
			State = 109; Match(SEMICOLON);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.ReportError(this, re);
			_errHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class Switch_statementContext : ParserRuleContext {
		public Switch_statementContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_switch_statement; } }
	 
		public Switch_statementContext() { }
		public virtual void CopyFrom(Switch_statementContext context) {
			base.CopyFrom(context);
		}
	}
	public partial class StatementSwitchContext : Switch_statementContext {
		public ITerminalNode SWITCH() { return GetToken(MiniCParser.SWITCH, 0); }
		public ITerminalNode LP() { return GetToken(MiniCParser.LP, 0); }
		public ExprContext expr() {
			return GetRuleContext<ExprContext>(0);
		}
		public ITerminalNode RP() { return GetToken(MiniCParser.RP, 0); }
		public ITerminalNode LB() { return GetToken(MiniCParser.LB, 0); }
		public ITerminalNode RB() { return GetToken(MiniCParser.RB, 0); }
		public Switch_caseContext[] switch_case() {
			return GetRuleContexts<Switch_caseContext>();
		}
		public Switch_caseContext switch_case(int i) {
			return GetRuleContext<Switch_caseContext>(i);
		}
		public Switch_defaultContext switch_default() {
			return GetRuleContext<Switch_defaultContext>(0);
		}
		public StatementSwitchContext(Switch_statementContext context) { CopyFrom(context); }
		public override void EnterRule(IParseTreeListener listener) {
			IMiniCListener typedListener = listener as IMiniCListener;
			if (typedListener != null) typedListener.EnterStatementSwitch(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			IMiniCListener typedListener = listener as IMiniCListener;
			if (typedListener != null) typedListener.ExitStatementSwitch(this);
		}
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IMiniCVisitor<TResult> typedVisitor = visitor as IMiniCVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitStatementSwitch(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
